<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2016-2022 Hedera Hashgraph, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<!-- Required Maven Version -->
	<modelVersion>4.0.0</modelVersion>

	<!-- Parent Configuration -->
	<parent>
		<groupId>com.swirlds</groupId>
		<artifactId>swirlds-platform</artifactId>
		<version>0.26.4-orvw.2</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<!-- Project Configuration -->
	<artifactId>swirlds-platform-core</artifactId>

	<!-- Project Properties -->
	<properties>
		<!-- Maven and Java Configuration -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<!--var app.repo is supplied by inheritors. mvn has dynamic var binding not lexical.-->
		<app.repo>${project.baseUri}../sdk/data/repos/app/</app.repo>
	</properties>


	<!-- Dependencies -->
	<dependencies>
		<!-- Swirlds -->
		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-common</artifactId>
			<version>0.26.4-orvw.2</version>
		</dependency>

		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-logging</artifactId>
			<version>0.26.4-orvw.2</version>
		</dependency>

		

		<!-- OffByNull PortMapper -->
		<dependency>
			<groupId>com.offbynull.portmapper</groupId>
			<artifactId>portmapper</artifactId>
		</dependency>

		<!-- Apache Commons -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
		</dependency>

		<!-- SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>

		<!-- Apache Log4j2 -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>

		

		<!-- BouncyCastle -->

		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
		</dependency>

		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
		</dependency>

		<!-- JavaFX -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
		</dependency>

		<!-- Mockito, can be removed once all tests migrate to test module -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-fchashmap</artifactId>
			<version>0.26.4-orvw.2</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-virtualmap</artifactId>
			<version>0.26.4-orvw.2</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-jasperdb</artifactId>
			<version>0.26.4-orvw.2</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

	<!-- Build Configuration -->
	<build>
		<plugins>

			

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<Sealed>true</Sealed>
							<Built-By>Swirlds, Inc.</Built-By>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>

		
	</build>


	<!-- Profiles -->
	<profiles>
		<!-- Automatic Profile (not for manual use) -->
		<profile>
			<id>maven_opts_defaults</id>
			<activation>
				<property>
					<name>!env.MAVEN_OPTS</name>
				</property>
			</activation>
			<properties>
				<env.MAVEN_OPTS/>
			</properties>
		</profile>

		<profile>
			<id>nightly_tests</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<jacoco.skip>true</jacoco.skip>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>@{argLine}
								--add-opens com.swirlds.platform/com.swirlds.platform=ALL-UNNAMED
								--add-opens com.swirlds.platform/com.swirlds.platform.sync=ALL-UNNAMED
								--add-opens com.swirlds.platform/com.swirlds.platform.state=ALL-UNNAMED
							</argLine>
							<forkCount>1</forkCount>
							<reuseForks>false</reuseForks>
							<excludes>
								<exclude>**/FCFSTimingTests.java</exclude>
								<exclude>**/SerializerTests.java</exclude>
								<exclude>**/ChunkManagerTests.java</exclude>
								<exclude>**/ChunkTest.java</exclude>
								<exclude>**/FolderEntryTests.java</exclude>
								<exclude>**/ConsensusV1Test.java</exclude>
							</excludes>
							<useSystemClassLoader>true</useSystemClassLoader>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>

